; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device.c_ccw_device_schedule_recovery.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_device.c_ccw_device_schedule_recovery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"recovery: schedule\0A\00", align 1
@recovery_lock = common dso_local global i32 0, align 4
@recovery_timer = common dso_local global i32 0, align 4
@recovery_phase = common dso_local global i64 0, align 8
@jiffies = common dso_local global i64 0, align 8
@recovery_delay = common dso_local global i32* null, align 8
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ccw_device_schedule_recovery to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ccw_device_schedule_recovery() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 @CIO_MSG_EVENT(i32 4, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %3 = load i64, i64* %1, align 8
  %4 = call i32 @spin_lock_irqsave(i32* @recovery_lock, i64 %3)
  %5 = call i32 @timer_pending(i32* @recovery_timer)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i64, i64* @recovery_phase, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %20

10:                                               ; preds = %7, %0
  store i64 0, i64* @recovery_phase, align 8
  %11 = load i64, i64* @jiffies, align 8
  %12 = load i32*, i32** @recovery_delay, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @HZ, align 4
  %16 = mul nsw i32 %14, %15
  %17 = sext i32 %16 to i64
  %18 = add nsw i64 %11, %17
  %19 = call i32 @mod_timer(i32* @recovery_timer, i64 %18)
  br label %20

20:                                               ; preds = %10, %7
  %21 = load i64, i64* %1, align 8
  %22 = call i32 @spin_unlock_irqrestore(i32* @recovery_lock, i64 %21)
  ret void
}

declare dso_local i32 @CIO_MSG_EVENT(i32, i8*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @timer_pending(i32*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
